tests/error/case_more_then_once.c
// check "Case '1' already handled."
// fail "... Here is the previous case."

int _start(){
    switch(1){
        case 1: break;
        case 1: break;
    }
    return 1;
}
